# miner_war

./: .gitignore  Anchor.toml  package-lock.json  package.json
app/: package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src/components/: CreateGame.tsx  WalletContextProvider.tsx
app/src/hooks/: useSession.ts  useSessionWallet.ts
programs-ecs/components/map/: Cargo.toml
programs-ecs/components/map/src/: lib.rs
programs-ecs/components/player/: Cargo.toml
programs-ecs/components/player/src/: lib.rs
programs-ecs/components/prizepool/: Cargo.toml
programs-ecs/components/prizepool/src/: lib.rs
programs-ecs/systems/battle/: Cargo.toml
programs-ecs/systems/battle/src/: lib.rs
programs-ecs/systems/buy_machine/: Cargo.toml
programs-ecs/systems/buy_machine/src/: lib.rs
programs-ecs/systems/buy_weapon/: Cargo.toml
programs-ecs/systems/buy_weapon/src/: lib.rs
programs-ecs/systems/cash_out/: Cargo.toml
programs-ecs/systems/cash_out/src/: lib.rs
programs-ecs/systems/game_start/: Cargo.toml
programs-ecs/systems/game_start/src/: lib.rs
programs-ecs/systems/init_map/: Cargo.toml
programs-ecs/systems/init_map/src/: lib.rs
programs-ecs/systems/init_player/: Cargo.toml
programs-ecs/systems/init_player/src/: lib.rs
programs-ecs/systems/init_prizepool/: Cargo.toml
programs-ecs/systems/mine/: Cargo.toml
programs-ecs/systems/pay_entry/: Cargo.toml
programs-ecs/systems/pay_entry/src/: lib.rs
programs/miner_war/: Cargo.toml
programs/miner_war/src/: lib.rs
tests/: miner_war.ts
(+2 files in other folders)
