[package]
name = "pay_entry"
version = "0.2.3"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pay_entry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []


[dependencies]
bolt-lang.workspace = true
serde = { version = "1.0", features = ["derive"] }
player = { version = "0.2.3", path = "../../components/player", features = ["cpi"] }
prizepool = { version = "0.2.3", path = "../../components/prizepool", features = ["cpi"] }
map = { version = "0.2.3", path = "../../components/map", features = ["cpi"] }
anchor-spl = "0.31.1"
